--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
