--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lazyload": "^3.2.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@testing-library/react": "^16.0.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "@types/react-lazyload": "^3.2.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
@@ -35,9 +37,13 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "happy-dom": "^15.7.4",
     "postcss": "^8.4.47",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "sharp": "0.33.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
     "vite": "^5.3.4",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-image-optimizer": "1.1.7",
     "vitest": "^2.1.2"
   }
 }
